--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,22 +5,21 @@ description: >-
   Supported formats: tiff, jpeg, HEIC
 homepage: https://www.github.com/bigflood/dartexif
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 dependencies:
   args: ^2.0.0
   collection: ^1.15.0
   convert: ^3.0.0
   json_annotation: ^4.3.0
-  sprintf: ^6.0.0
+  sprintf: ^7.0.0
 dev_dependencies:
   archive: ^3.1.2
   build_runner: ^2.1.4
   http: ^0.13.1
   json_serializable: ^6.0.0
-  lint: ^1.5.3
+  lint: ^2.0.1
   path: ^1.8.0
   stream_channel: ^2.1.0
   test: ^1.16.8
 executables:
   print_exif:
-  
